test/visibility/import/enablesUnqualified/multipleUnqualified/last-before-list-not-mod.good
last-before-list-not-mod.chpl:6: In module 'User':
last-before-list-not-mod.chpl:7: error: cannot 'import' symbol 'B', which is not a module
